--- a/style.css
+++ b/style.css
@@ -1,38 +1,43 @@
-*{
+* {
     margin: 0;
     padding: 0;
-     font-family: sans-serif;
-     box-sizing: border-box;
+    font-family: sans-serif;
+    box-sizing: border-box;
 }
-.container{
-    width: 100;
+
+.container {
+    width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg,#392657,#5e7cad);
+    background: linear-gradient(135deg, #392657, #5e7cad);
     color: #fff;
     padding: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.calculator{
+
+.calculator {
     width: 100%;
     max-width: 600px;
-    margin-left: 30%;
-margin-top: 1%;
-
+    text-align: center;
 }
-.calculator h1{
+
+.calculator h1 {
     font-size: 60px;
     color: #ffff76;
-
 }
-.input-box{
+
+.input-box {
     margin: 40px 0;
     padding: 35px;
     border-radius: 10px;
     background: rgba(156, 98, 231, 0.993);
     display: flex;
     align-items: center;
-     
+    flex-wrap: wrap;
 }
-.input-box input{
+
+.input-box input {
     flex: 1;
     margin-right: 20px;
     padding: 14px 20px;
@@ -41,9 +46,9 @@ margin-top: 1%;
     font-size: 20px;
     border-radius: 100px;
     position: relative;
-
 }
-.input-box button{
+
+.input-box button {
     background: #da475bfa;
     border: 0;
     outline: 0;
@@ -52,27 +57,54 @@ margin-top: 1%;
     font-weight: 800;
     color: #000000;
     cursor: pointer;
-
-
 }
 
-
-
-
-.input-box input::-webkit-calender-picker-indicator{
-    top: 0;
+.input-box input::-webkit-calendar-picker-indicator {
+    top: 1;
     left: 0;
     right: 0;
-    bottom: 0;
-    width: auto;
+    bottom: 1;
+    width:auto;
     position: absolute;
-    background-position: calc(100% - 10px);
-background-size: 30px;
-cursor: pointer;
+    background-position: calc(100% - 20px);
+    background-size: 30px;
+    cursor: pointer;
 }
-#result{
+
+#result {
     font-size: 20px;
 }
-#result span{
+
+#result span {
     color: black;
+}
+
+/* Responsive styles */
+@media (max-width: 600px) {
+    .container {
+        padding: 5%;
+    }
+
+    .calculator h1 {
+        font-size: 40px;
+    }
+
+    .input-box {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .input-box input {
+        margin: 0 0 20px 0;
+        font-size: 18px;
+    }
+
+    .input-box button {
+        padding: 12px 20px;
+        font-size: 18px;
+    }
+
+    #result {
+        font-size: 18px;
+    }
 }
